minor alignment fix

--- a/P02_Final/css/main.css
+++ b/P02_Final/css/main.css
@@ -727,6 +727,7 @@ select {
 @media (max-width: 602px) {
 		.tuition-image {
 		width:100%;
+		padding: 0;
 	}
 }
 /*--------------media query for smartphone-----------------------*/
